# interpreter

./: lco.cabal
app/: Main.hs
src/LCO/: Core.hs
src/LCO/Core/: Interpreter.hs  Template.hs  Types.hs
